[tool.poetry]
name = "spf-modder"
version = "0.1.0"
description = ""
authors = ["hallowslab <hallow.tech.lab@gmail.com>"]
readme = "README.md"
packages = [{include = "spf_modder"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pylint = "^3.0.3"
mypy = "^1.7.1"
autoflake = "^2.2.1"
taskipy = "^1.12.2"

[tool.taskipy.tasks]
format = "black . && autoflake -i -r  --remove-unused-variables --remove-all-unused-imports . && mypy ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
